--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -518,6 +518,11 @@ mark,
 }
 
 .image-jenil {
+  
+  border-radius: 25%;
+}
+
+.image-map {
   max-width: 100%;
   height: auto;
   border-radius: 25%;
